[RAT-27] removed login from news-updates.html, warning on the hps repository (removed display: none;)

--- a/node/3.html
+++ b/node/3.html
@@ -108,7 +108,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","setHasJsCookie"
       
   <div class="node node-page node-full">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><!-- Warning Dialog Box -->
-      <div id="warningDialog" style="display: none; padding: 20px; background-color: #ffdddd; border: 1px solid #ff0000; color:#a94442; margin-bottom: 20px;">
+      <div id="warningDialog" style="padding: 20px; background-color: #ffdddd; border: 1px solid #ff0000; color:#a94442; margin-bottom: 20px;">
           <p><strong>Warning:</strong> Please note that the HPS Repository is no longer reachable. At this point, this page exists for archival purposes only.</p>
       </div>
       <div class="field-items"><div class="field-item even" property="content:encoded"><p>The <a href="http://hpsrepository.asu.edu/" target="_blank">HPS Repository</a> is a central database for storing and providing access to digital objects documenting the history and philosophy of science. The repository is where contributing users upload all of their objects for storage.  </p>
