--- a/node/11.html
+++ b/node/11.html
@@ -109,7 +109,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","setHasJsCookie"
     
   <div class="node node-page node-full">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>This topic is under construction. Please check back later.</p>
-<p>Have something to contribute? Contact the editor, Kate MacCord (<a href="mailto:digitalhpscon@gmail.com">digitalhpscon@gmail.com</a>).</p>
+<p>Have something to contribute? Contact the editor, Julia Damerow (<a href="mailto:digitalhpscon@gmail.com">digitalhpscon@gmail.com</a>).</p>
 </div></div></div>  </div>
 
       <footer>
